force-app/main/default/objects/REVA_Guest_House_Room__c/REVA_Guest_House_Room__c.object-meta.xml
<CustomObject>
    <label>REVA Guest House Room</label>
    <nameField>
        <label>REVA Guest House Room Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reva Guest House Rooms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>