force-app/main/default/objects/REVA_Guest_House_Room__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <label>Floor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st Floor</fullName>
            </value>
            <value>
                <fullName>2nd Floor</fullName>
            </value>
            <value>
                <fullName>3rd Floor</fullName>
            </value>
            <value>
                <fullName>4th Floor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>