force-app/main/default/objects/REVA_Guest_House_Room__c/fields/Maximum_Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Occupancy__c</fullName>
    <label>Maximum Occupancy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Sharing</fullName>
            </value>
            <value>
                <fullName>Two Sharing</fullName>
            </value>
            <value>
                <fullName>Three Sharing</fullName>
            </value>
            <value>
                <fullName>Four Sharing</fullName>
            </value>
            <value>
                <fullName>Queen Bed</fullName>
            </value>
            <value>
                <fullName>King Bed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>