force-app/main/default/objects/REVA_Guest_House_Room__c/fields/Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Type__c</fullName>
    <label>Room Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A/C</fullName>
            </value>
            <value>
                <fullName>Non A/C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>