force-app/main/default/objects/REVA_Guest_House_Room__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Available__c</columns>
    <columns>Floor__c</columns>
    <columns>Room_Type__c</columns>
    <columns>Maximum_Occupancy__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>